@@ -39,6 +39,15 @@ krb5_auth_dialog_LDADD = \
 			@GLADE_LIBS@ \
 			@GTK_LIBS@
 
+BUILT_SOURCES = \
+	krb5-auth-applet-dbus-glue.h
+
+krb5-auth-applet-dbus-glue.h: $(srcdir)/krb5-auth-applet-dbus.xml
+	dbus-binding-tool                 \
+		--mode=glib-server        \
+		--prefix=krb5_auth_dialog \
+		$< > $@
+
 AM_CPPFLAGS = -I $(top_srcdir)/gtksecentry/ -I $(top_srcdir)/secmem/
 
 pkgdatadir = $(datadir)/krb5-auth-dialog
@@ -52,4 +61,6 @@ EXTRA_DIST =		\
 	krb5-auth-dialog.1.in
 
 CLEANFILES = $(schema_DATA)
-DISTCLEANFILES = krb5-auth-dialog.desktop
+DISTCLEANFILES = \
+	krb5-auth-dialog.desktop 	\
+	krb5-auth-applet-dbus-glue.h
