@@ -22,7 +22,14 @@
 #define KRB5_AUTH_DBUS_H
 
 #include <glib.h>
+#include <dbus/dbus-glib.h>
+#include <dbus/dbus-glib-lowlevel.h>
+#include "krb5-auth-applet.h"
 
 gboolean ka_dbus_connect(unsigned int* status);
+gboolean ka_dbus_service(KaApplet* applet);
+gboolean ka_dbus_acquire_tgt (KaApplet *applet,
+			      const gchar *principal,
+			      DBusGMethodInvocation *context);
 
 #endif /* KRB5_AUTH_DBUS_H */
